--- a/src/config/lang/kz.json
+++ b/src/config/lang/kz.json
@@ -39,9 +39,14 @@
                 "sections": {},
                 "pages": {}
             },
-            "portfolio": {
+            "projects": {
                 "meta": {
-                    "title": "Портфолио"
+                    "title": "Жобалар"
+                }
+            },
+            "services": {
+                "meta": {
+                    "title": "Қызметтер"
                 }
             },
             "contact": {
