--- a/src/config/lang/kz.json
+++ b/src/config/lang/kz.json
@@ -24,7 +24,19 @@
                 "meta": {
                     "title": ""
                 },
-                "sections": {}
+                "sections": {
+                    "landing": {
+                        "title": "Сапалы дизайн мен веб-әзірлеудің синергетикасы",
+                        "info": "Мен интуитивті веб-сайттар мен қолданбаларды әзірлеймін, пайдаланушы тәжірибесін, негізгі көрсеткіштерді және цифрлық көшбасшылықты жақсартамын."
+                    },
+                    "about": {
+                        "title": "Мен пайдаланушыларға бір көргеннен ұнайтын және бизнеспен немесе өніммен үздіксіз біріктіретін эстетикалық дизайн жасаймын",
+                        "info": "Әрбір жоба - бұл өзімді көрсету және адамдарға керемет өнім беру мүмкіндігі. Мен өзім жақсы көретін іспен айналысамын және бұл маған және айналамдағы адамдарға пайда әкеледі. Ең жақсы дизайнды жасау және нарық күтулерінен асып түсу. Мен үнемі даму үстіндемін, басқа дизайнерлерге көмектесемін және кәсіби блог жазамын",
+                        "yearsInDev": "веб-әзірлеуде жыл",
+                        "completedProjects": "аяқталған жобалар",
+                        "reviewsGiven": "пікірлер берілді"
+                    }
+                }
             },
             "notFound": {
                 "meta": {
@@ -60,7 +72,9 @@
                 }
             }
         },
-        "buttons": {},
+        "buttons": {
+            "otherProjects": "Қалған жобалар"
+        },
         "labels": {
             "downloadCV": "Резюмені жіктеу",
             "requestProject": "Жобаны сұрау"
