--- a/src/config/lang/ru.json
+++ b/src/config/lang/ru.json
@@ -24,7 +24,19 @@
                 "meta": {
                     "title": ""
                 },
-                "sections": {}
+                "sections": {
+                    "landing": {
+                        "title": "Синергия качественного дизайна и веб-разработки",
+                        "info": "Я разрабатываю интуитивно понятные веб-сайты и приложения, улучшая пользовательский опыт, ключевые показатели и цифровое лидерство."
+                    },
+                    "about": {
+                        "title": "Создаю эстетичный дизайн, который нравится пользователям с первого взгляда и легко интегрируется с бизнесом или продуктом.",
+                        "info": "Каждый проект — это возможность проявить себя и подарить людям крутой продукт. Я делаю то, что люблю, и это приносит пользу мне и окружающим меня людям. Создаем лучший дизайн и превосходим ожидания рынка. Постоянно развиваюсь, помогаю другим дизайнерам и веду профессиональный блог.",
+                        "yearsInDev": "лет в веб-разработке",
+                        "completedProjects": "завершенных проектов",
+                        "reviewsGiven": "отзывов"
+                    }
+                }
             },
             "notFound": {
                 "meta": {
@@ -60,6 +72,7 @@
             }
         },
         "buttons": {
+            "otherProjects": "Остальные проекты"
         },
         "labels": {
             "downloadCV": "Скачать резюме",
