--- a/src/config/lang/en.json
+++ b/src/config/lang/en.json
@@ -49,7 +49,11 @@
                 "meta": {
                     "title": "About me"
                 },
-                "sections": {},
+                "sections": {
+                    "about": {
+                        "words": ["me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy", "me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy", "me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy", "me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy", "me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy"]
+                    }
+                },
                 "pages": {}
             },
             "projects": {
@@ -65,6 +69,12 @@
             "contact": {
                 "meta": {
                     "title": "Contact"
+                },
+                "sections": {
+                    "banner": {
+                        "title": "You’ve got a challenge? Let's talk!",
+                        "info": "Get a free consultation on your project – leave a request on the website or contact me in any convenient way"
+                    }
                 }
             },
             "blog": {
@@ -74,7 +84,10 @@
             }
         },
         "buttons": {
-            "otherProjects": "Other projects"
+            "otherProjects": "Other projects",
+            "otherArticles": "Other articles",
+            "leaveRequest": "Leave a request",
+            "moreAbout": "More about me"
         },
         "labels": {
             "downloadCV": "Download CV",
