--- a/src/config/lang/kz.json
+++ b/src/config/lang/kz.json
@@ -5,7 +5,8 @@
         "success": "Сәтті",
         "error": "Қате",
         "info": "Ақпарат",
-        "warning": "Назар аударыңыз"
+        "warning": "Назар аударыңыз",
+        "linkCopied": "Сілтеме көшірілді"
     },
     "app": {
         "meta": {
@@ -17,7 +18,7 @@
             ]
         },
         "files": {
-            "cv": "CV Aben Angsar ru.docx"
+            "cv": "Angsar Aben CV.pdf"
         },
         "pages": {
             "home": {
@@ -26,15 +27,15 @@
                 },
                 "sections": {
                     "landing": {
-                        "title": "Сапалы дизайн мен веб-әзірлеудің синергетикасы",
-                        "info": "Мен интуитивті веб-сайттар мен қолданбаларды әзірлеймін, пайдаланушы тәжірибесін, негізгі көрсеткіштерді және цифрлық көшбасшылықты жақсартамын."
+                        "title": "Әсерлі шешімдер үшін сапалы дизайн және әзірлеу",
+                        "info": "Мен қоғамға пайда әкелетін, пайдаланушы тәжірибесі мен негізгі көрсеткіштерді жақсартатын интуитивті шешімдерді әзірлеймін."
                     },
                     "about": {
-                        "title": "Мен пайдаланушыларға бір көргеннен ұнайтын және бизнеспен немесе өніммен үздіксіз біріктіретін эстетикалық дизайн жасаймын",
-                        "info": "Әрбір жоба - бұл өзімді көрсету және адамдарға керемет өнім беру мүмкіндігі. Мен өзім жақсы көретін іспен айналысамын және бұл маған және айналамдағы адамдарға пайда әкеледі. Ең жақсы дизайнды жасау және нарық күтулерінен асып түсу. Мен үнемі даму үстіндемін, басқа дизайнерлерге көмектесемін және кәсіби блог жазамын",
-                        "yearsInDev": "веб-әзірлеуде жыл",
+                        "title": "Қоғамдастықтарды күшейтетін және ұзақ әсер ететін тартымды өнімдерді, динамикалық веб-қолданбаларды және сандық платформаларды жасау.",
+                        "info": "Әрбір жоба - бұл өзімді көрсету және адамдарға керемет өнім беру мүмкіндігі. Мен өзім жақсы көретін іспен айналысамын және бұл маған және айналамдағы адамдарға пайда әкеледі. Ең жақсы дизайнды жасау және нарық күтулерінен асып түсу. Мен басқа әзірлеушілерге көмектесіп, үнемі дамып келемін.",
+                        "yearsInDev": "әзірлеуде жыл",
                         "completedProjects": "аяқталған жобалар",
-                        "reviewsGiven": "пікірлер берілді"
+                        "passion": "құмарлық"
                     }
                 }
             },
@@ -51,8 +52,14 @@
                 "sections": {
                     "about": {
                         "words": ["me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy"],
-                        "info1": "Қазақстан, Астана қаласында туған. Мен соңғы 4 жылдан астам уақытты брендинг, веб-сайттар, қолданбалар және маркетингте VC қолдайтын өнімдермен бірлесіп жұмыс істедім.",
-                        "info2": "Мен тартымды әңгімелер мен цифрлық тәжірибелер жасау үшін құрылтайшылармен күш біріктіремін. Өнімдерін жарқырататын, пайдаланушылармен резонанс тудыратын және көбірек инвесторларды тартатындар."
+                        "info1": "Қазақстан, Астана қаласында туылдым. 2020 жылдан бастап мен басқалардың өмірін жақсартатын жобаларды дамытуға назар аудардым. Мен қолданушыларға жарқырап, резонанс тудыратын өнімдер жасаймын 💡.",
+                        "info2": "Кодтаудан тыс, мен спортпен айналысқанды ұнатамын 🏀 ⚽️ 🏋🏽‍♂️, видео ойындар ойнағанды ​​және волонтерлік қызметті ұнатамын. Мен оң әсер ету үшін технологияны пайдаланудың жаңа жолдарын үнемі зерттеп жүрмін."
+                    },
+                    "skills": {
+                        "title": "Дағдылар"
+                    },
+                    "experience": {
+                        "title": "Тәжірибе"
                     }
                 },
                 "pages": {}
@@ -74,7 +81,11 @@
                 "sections": {
                     "banner": {
                         "title": "Сізде қиындық бар ма? Сөйлесейік!",
-                        "info": "Сіздің жобаңыз бойынша ақысыз кеңес алыңыз-веб-сайтқа сұраныс қалдырыңыз немесе кез-келген ыңғайлы тәсілмен маған хабарласыңыз"
+                        "info": "Веб-сайт арқылы сұраныс қалдырыңыз немесе кез-келген ыңғайлы тәсілмен маған хабарласыңыз"
+                    },
+                    "contact": {
+                        "title": "Хабарласыңыз!",
+                        "info": "Мен сізден естігім келеді! Сұрағыңыз болса, бірлесіп жұмыс жасағыңыз келсе немесе жай ғана сәлем айтқыңыз келсе, хабарласыңыз. Төмендегі байланыс пішінін пайдалана аласыз, мен сізге мүмкіндігінше тезірек хабарласамын."
                     }
                 }
             },
@@ -85,18 +96,29 @@
             }
         },
         "buttons": {
-            "otherProjects": "Қалған жобалар",
-            "otherArticles": "Қалған мақалалар",
+            "otherProjects": "Басқа жобалар",
+            "otherArticles": "Басқа мақалалар",
             "leaveRequest": "Өтініш қалдыру",
-            "moreAbout": "Мен туралы толығырақ"
+            "moreAbout": "Мен туралы толығырақ",
+            "send": "Жіберу"
         },
         "labels": {
             "downloadCV": "Резюмені жіктеу",
             "requestProject": "Жобаны сұрау",
             "allRightsReserved": "Барлық құқықтар қорғалған",
-            "privacyPolicy": "Құпиялылық саясаты"
+            "privacyPolicy": "Құпиялылық саясаты",
+            "firstName": "Аты",
+            "lastName": "Жөні",
+            "email": "Электрондық почта",
+            "message": "Хабар",
+            "firstNamePlaceholder": "Аңсар",
+            "lastNamePlaceholder": "Әбен",
+            "emailPlaceholder": "angsar.aben@gmail.com",
+            "messagePlaceholder": "Сәлем!"
         },
         "global": {
+            "available": "Жұмыс үшін боспын",
+            "unavailable": "Бос емес",
             "days": {
                 "monday": {
                     "full": "Дүйсенбі",
