--- a/src/config/lang/ru.json
+++ b/src/config/lang/ru.json
@@ -5,19 +5,20 @@
         "success": "Успешно",
         "error": "Ошибка",
         "info": "Инфо",
-        "warning": "Внимание"
+        "warning": "Внимание",
+        "linkCopied": "Ссылка скопирована"
     },
     "app": {
         "meta": {
             "title": "Ансар Абен",
-            "description": "Мой портфолио.",
+            "description": "Мой портфолио вебсайт.",
             "keywords": [
                 "Next.js",
                 "Портфолио"
             ]
         },
         "files": {
-            "cv": "CV Aben Angsar ru.docx"
+            "cv": "Angsar Aben CV.pdf"
         },
         "pages": {
             "home": {
@@ -26,15 +27,15 @@
                 },
                 "sections": {
                     "landing": {
-                        "title": "Синергия качественного дизайна и веб-разработки",
-                        "info": "Я разрабатываю интуитивно понятные веб-сайты и приложения, улучшая пользовательский опыт, ключевые показатели и цифровое лидерство."
+                        "title": "Качественный дизайн и разработка для эффективных решений",
+                        "info": "Я разрабатываю интуитивные решения, которые приносят пользу обществу, улучшая пользовательский опыт и ключевые показатели."
                     },
                     "about": {
-                        "title": "Создаю эстетичный дизайн, который нравится пользователям с первого взгляда и легко интегрируется с бизнесом или продуктом.",
-                        "info": "Каждый проект — это возможность проявить себя и подарить людям крутой продукт. Я делаю то, что люблю, и это приносит пользу мне и окружающим меня людям. Создаем лучший дизайн и превосходим ожидания рынка. Постоянно развиваюсь, помогаю другим дизайнерам и веду профессиональный блог.",
-                        "yearsInDev": "лет в веб-разработке",
+                        "title": "Создание привлекательных продуктов, динамичных веб-приложений и цифровых платформ, которые расширяют возможности сообществ и оказывают долгосрочное влияние.",
+                        "info": "Каждый проект - это возможность выразить себя и подарить людям крутой продукт. Я делаю то, что люблю, и это приносит пользу мне и окружающим меня людям. Делаю лучшие проекты и превосхожу ожидания рынка. Я постоянно развиваюсь, помогая другим разработчикам.",
+                        "yearsInDev": "лет в разработке",
                         "completedProjects": "завершенных проектов",
-                        "reviewsGiven": "отзывов"
+                        "passion": "страсть"
                     }
                 }
             },
@@ -50,8 +51,14 @@
                 "sections": {
                     "about": {
                         "words": ["me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy"],
-                        "info1": "Родился в Астане, Казахстан. Последние 4+ года я сотрудничал с продуктами, поддерживаемыми венчурным капиталом, по брендингу, веб-сайтам, приложениям и маркетингу.",
-                        "info2": "Я объединяю усилия с основателями для создания захватывающих историй и цифровых впечатлений. Те, которые заставляют их продукты сиять, находить отклик у пользователей и привлекать больше инвесторов."
+                        "info1": "Родился в Астане, Казахстан. С 2020 года я сосредоточился на разработке проектов, которые улучшают жизнь других людей. Я создаю продукты, которые сияют и находят отклик у пользователей 💡.",
+                        "info2": "Вне кодинга я люблю заниматься спортом 🏀 ⚽️ 🏋🏽‍♂️, играть в видеоигры и заниматься волонтерством. Я постоянно изучаю новые способы использования технологий для позитивного воздействия."
+                    },
+                    "skills": {
+                        "title": "Навыки"
+                    },
+                    "experience": {
+                        "title": "Опыт"
                     }
                 },
                 "pages": {}
@@ -72,8 +79,12 @@
                 },
                 "sections": {
                     "banner": {
-                        "title": "У тебя есть задача? Давай поговорим!",
-                        "info": "Получите бесплатную консультацию по вашему проекту – оставьте заявку на сайте или свяжитесь со мной любым удобным способом"
+                        "title": "У вас есть задача? Давайте поговорим!",
+                        "info": "Оставьте заявку на сайте или свяжитесь со мной любым удобным способом"
+                    },
+                    "contact": {
+                        "title": "Свяжитесь со мной!",
+                        "info": "Я с удовольствием послушаю вас! Если у вас есть вопрос, вы хотите сотрудничать или просто поздороваться, не стесняйтесь обращаться ко мне. Вы можете воспользоваться формой обратной связи ниже, и я свяжусь с вами как можно скорее."
                     }
                 }
             },
@@ -84,18 +95,29 @@
             }
         },
         "buttons": {
-            "otherProjects": "Остальные проекты",
-            "otherArticles": "Остальные статьи",
+            "otherProjects": "Другие проекты",
+            "otherArticles": "Другие статьи",
             "leaveRequest": "Оставьте заявку",
-            "moreAbout": "Подробнее обо мне"
+            "moreAbout": "Подробнее обо мне",
+            "send": "Отправить"
         },
         "labels": {
             "downloadCV": "Скачать резюме",
             "requestProject": "Запросить проект",
             "allRightsReserved": "Все права защищены.",
-            "privacyPolicy": "Политика конфиденциальности"
+            "privacyPolicy": "Политика конфиденциальности",
+            "firstName": "Имя",
+            "lastName": "Фамилия",
+            "email": "Электронная почта",
+            "message": "Сообщение",
+            "firstNamePlaceholder": "Ансар",
+            "lastNamePlaceholder": "Абен",
+            "emailPlaceholder": "angsar.aben@gmail.com",
+            "messagePlaceholder": "Привет!"
         },
         "global": {
+            "available": "Доступен для работы",
+            "unavailable": "Занят",
             "days": {
                 "monday": {
                     "full": "Понедельник",
