--- a/src/config/lang/kz.json
+++ b/src/config/lang/kz.json
@@ -41,7 +41,8 @@
             },
             "notFound": {
                 "meta": {
-                    "title": "Табылған жоқ"
+                    "title": "Табылған жоқ",
+                    "description": "Сіз іздеген бетті табу мүмкін емес"
                 },
                 "sections": {}
             },
@@ -51,7 +52,7 @@
                 },
                 "sections": {
                     "about": {
-                        "words": ["me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy"],
+                        "words": ["мен", "web-develment", "front-end", "grace", "алғыс", "арнау", "еңбек", "домбыра", "спорт", "жаттығу залы", "мақсат", "back-end", "дизайн", "тұрақтылық", "қатты", "жұмыс", "отбасы", "махаббат", "эмпатия", "мен", "веб-девеломент", "фронт-end", "рақмет", "арнау", "еңбек", "домбыра", "спорт","спорт залы", "мақсат", "бэк-энд", "дизайн", "төзімділік", "қаттылық" , "жұмыс", "отбасы", "махаббат", "эмпатия"],
                         "info1": "Қазақстан, Астана қаласында туылдым. 2020 жылдан бастап мен басқалардың өмірін жақсартатын жобаларды дамытуға назар аудардым. Мен қолданушыларға жарқырап, резонанс тудыратын өнімдер жасаймын 💡.",
                         "info2": "Кодтаудан тыс, мен спортпен айналысқанды ұнатамын 🏀 ⚽️ 🏋🏽‍♂️, видео ойындар ойнағанды ​​және волонтерлік қызметті ұнатамын. Мен оң әсер ету үшін технологияны пайдаланудың жаңа жолдарын үнемі зерттеп жүрмін."
                     },
@@ -93,6 +94,19 @@
                 "meta": {
                     "title": "Блог"
                 }
+            },
+            "project": {
+                "sections": {
+                    "technologies": {
+                        "title": "Технологиялар"
+                    },
+                    "pictures": {
+                        "title": "Суреттер"
+                    },
+                    "snippets": {
+                        "title": "Код снипеттері"
+                    }
+                }
             }
         },
         "buttons": {
@@ -100,7 +114,8 @@
             "otherArticles": "Басқа мақалалар",
             "leaveRequest": "Өтініш қалдыру",
             "moreAbout": "Мен туралы толығырақ",
-            "send": "Жіберу"
+            "send": "Жіберу",
+            "goBack": "Артқа бару"
         },
         "labels": {
             "downloadCV": "Резюмені жіктеу",
