--- a/src/config/lang/ru.json
+++ b/src/config/lang/ru.json
@@ -41,7 +41,8 @@
             },
             "notFound": {
                 "meta": {
-                    "title": "Не найдено"
+                    "title": "Не найдено",
+                    "description": "Страница, которую вы ищете, не найдена"
                 }
             },
             "about": {
@@ -50,7 +51,7 @@
                 },
                 "sections": {
                     "about": {
-                        "words": ["me", "web-development", "front-end", "grace", "gratitude", "dedication", "hard work", "dombra", "sport", "gym", "goal", "back-end", "design", "resilience", "tough", "work", "family", "love", "empathy"],
+                        "words": ["я", "веб-разработка", "фронт-энд", "благодать", "благодарность", "преданность", "тяжелая работа", "домбра", "спорт", "спортзал", "цель", "бэк-энд", "дизайн", "стойкость", "жесткий", "работа", "семья", "любовь", "эмпатия", "я", "веб-разработка", "фронт-энд", "благодать", "благодарность", "преданность", "тяжелая работа", "домбра", "спорт", "спортзал", "цель", "бэк-энд", "дизайн", "стойкость", "жесткий", "работа", "семья", "любовь", "эмпатия"],
                         "info1": "Родился в Астане, Казахстан. С 2020 года я сосредоточился на разработке проектов, которые улучшают жизнь других людей. Я создаю продукты, которые сияют и находят отклик у пользователей 💡.",
                         "info2": "Вне кодинга я люблю заниматься спортом 🏀 ⚽️ 🏋🏽‍♂️, играть в видеоигры и заниматься волонтерством. Я постоянно изучаю новые способы использования технологий для позитивного воздействия."
                     },
@@ -92,6 +93,19 @@
                 "meta": {
                     "title": "Блог"
                 }
+            },
+            "project": {
+                "sections": {
+                    "technologies": {
+                        "title": "Технологии"
+                    },
+                    "pictures": {
+                        "title": "Картинки"
+                    },
+                    "snippets": {
+                        "title": "Сниппеты кода"
+                    }
+                }
             }
         },
         "buttons": {
@@ -99,7 +113,8 @@
             "otherArticles": "Другие статьи",
             "leaveRequest": "Оставьте заявку",
             "moreAbout": "Подробнее обо мне",
-            "send": "Отправить"
+            "send": "Отправить",
+            "goBack": "Вернуться назад"
         },
         "labels": {
             "downloadCV": "Скачать резюме",
